--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
   <title>02Bases</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="container pt-2">
   <app-root></app-root>
 </body>
 </html>
